dev_assets/dial-adm-plus.prod.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/proxy-body-size: 500m
    kubectl.kubernetes.io/last-applied-configuration: |
      >
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"ingress.kubernetes.io/proxy-body-size":"500m","kubernetes.io/ingress.class":"nginx","nginx.ingress.kubernetes.io/proxy-body-size":"500m","nginx.ingress.kubernetes.io/proxy-buffer-size":"8k","nginx.ingress.kubernetes.io/proxy-buffering":"on","nginx.ingress.kubernetes.io/proxy-buffers-number":"4","nginx.ingress.kubernetes.io/proxy-connect-timeout":"1500","nginx.ingress.kubernetes.io/proxy-max-temp-file-size": [...]
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 500m
    nginx.ingress.kubernetes.io/proxy-buffer-size: 8k
    nginx.ingress.kubernetes.io/proxy-buffering: 'on'
    nginx.ingress.kubernetes.io/proxy-buffers-number: '4'
    nginx.ingress.kubernetes.io/proxy-connect-timeout: '1500'
    nginx.ingress.kubernetes.io/proxy-max-temp-file-size: 1024m
    nginx.ingress.kubernetes.io/proxy-next-upstream-timeout: '1500'
    nginx.ingress.kubernetes.io/proxy-read-timeout: '1500'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '1500'
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
  creationTimestamp: '2021-08-05T01:20:52Z'
  generation: 8
  managedFields:
    - apiVersion: networking.k8s.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:ingress.kubernetes.io/proxy-body-size: {}
            f:kubernetes.io/ingress.class: {}
            f:nginx.ingress.kubernetes.io/proxy-body-size: {}
            f:nginx.ingress.kubernetes.io/proxy-buffer-size: {}
            f:nginx.ingress.kubernetes.io/proxy-buffering: {}
            f:nginx.ingress.kubernetes.io/proxy-buffers-number: {}
            f:nginx.ingress.kubernetes.io/proxy-connect-timeout: {}
            f:nginx.ingress.kubernetes.io/proxy-max-temp-file-size: {}
            f:nginx.ingress.kubernetes.io/proxy-next-upstream-timeout: {}
            f:nginx.ingress.kubernetes.io/proxy-read-timeout: {}
            f:nginx.ingress.kubernetes.io/proxy-send-timeout: {}
            f:nginx.ingress.kubernetes.io/rewrite-target: {}
            f:nginx.ingress.kubernetes.io/ssl-redirect: {}
      manager: kubectl-create
      operation: Update
      time: '2021-08-05T01:20:52Z'
    - apiVersion: networking.k8s.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            f:kubectl.kubernetes.io/last-applied-configuration: {}
        f:spec:
          f:rules: {}
          f:tls: {}
      manager: kubectl-client-side-apply
      operation: Update
      time: '2021-09-13T14:34:49Z'
    - apiVersion: networking.k8s.io/v1beta1
      fieldsType: FieldsV1
      fieldsV1:
        f:status:
          f:loadBalancer:
            f:ingress: {}
      manager: nginx-ingress-controller
      operation: Update
      time: '2021-09-29T15:10:47Z'
  name: dial-adm-plus-prod
  namespace: default
  resourceVersion: '90457108'
  uid: 5bf72598-c6cd-401c-b669-5c3ac07343ce
spec:
  rules:
    - host: plus.dialog.cm
      http:
        paths:
          - backend:
              service:
                name: dial-adm-plus-prod-service
                port:
                  number: 80
            pathType: ImplementationSpecific
          - backend:
              service:
                name: dial-adm-plus-prod-service
                port:
                  number: 443
            pathType: ImplementationSpecific
    - host: passarelli.dialog.cm
      http:
        paths:
          - backend:
              service:
                name: dial-adm-plus-prod-service
                port:
                  number: 80
            pathType: ImplementationSpecific
          - backend:
              service:
                name: dial-adm-plus-prod-service
                port:
                  number: 443
            pathType: ImplementationSpecific
    - host: rech.dialog.cm
      http:
        paths:
          - backend:
              service:
                name: dial-adm-plus-prod-service
                port:
                  number: 80
            pathType: ImplementationSpecific
          - backend:
              service:
                name: dial-adm-plus-prod-service
                port:
                  number: 443
            pathType: ImplementationSpecific
    - host: unimedsulcapixaba.dialog.cm
      http:
        paths:
          - backend:
              service:
                name: dial-adm-plus-prod-service
                port:
                  number: 80
            pathType: ImplementationSpecific
          - backend:
              service:
                name: dial-adm-plus-prod-service
                port:
                  number: 443
            pathType: ImplementationSpecific
    - host: lojasmm.dialog.cm
      http:
        paths:
          - backend:
              service:
                name: dial-adm-plus-prod-service
                port:
                  number: 80
            pathType: ImplementationSpecific
          - backend:
              service:
                name: dial-adm-plus-prod-service
                port:
                  number: 443
            pathType: ImplementationSpecific
    - host: freto.dialog.cm
      http:
        paths:
          - backend:
              service:
                name: dial-adm-plus-prod-service
                port:
                  number: 80
            pathType: ImplementationSpecific
          - backend:
              service:
                name: dial-adm-plus-prod-service
                port:
                  number: 443
            pathType: ImplementationSpecific
    - host: cearasc.dialog.cm
      http:
        paths:
          - backend:
              service:
                name: dial-adm-plus-prod-service
                port:
                  number: 80
            pathType: ImplementationSpecific
          - backend:
              service:
                name: dial-adm-plus-prod-service
                port:
                  number: 443
            pathType: ImplementationSpecific
    - host: primecargo.dialog.cm
      http:
        paths:
          - backend:
              service:
                name: dial-adm-plus-prod-service
                port:
                  number: 80
            pathType: ImplementationSpecific
          - backend:
              service:
                name: dial-adm-plus-prod-service
                port:
                  number: 443
            pathType: ImplementationSpecific
    - host: allied.dialog.cm
      http:
        paths:
          - backend:
              service:
                name: dial-adm-plus-prod-service
                port:
                  number: 80
            pathType: ImplementationSpecific
          - backend:
              service:
                name: dial-adm-plus-prod-service
                port:
                  number: 443
            pathType: ImplementationSpecific
    - host: zaz.dialog.cm
      http:
        paths:
          - backend:
              service:
                name: dial-adm-plus-prod-service
                port:
                  number: 80
            pathType: ImplementationSpecific
          - backend:
              service:
                name: dial-adm-plus-prod-service
                port:
                  number: 443
            pathType: ImplementationSpecific
    - host: menteemfoco.dialog.cm
      http:
        paths:
          - backend:
              service:
                name: dial-adm-plus-prod-service
                port:
                  number: 80
            pathType: ImplementationSpecific
          - backend:
              service:
                name: dial-adm-plus-prod-service
                port:
                  number: 443
            pathType: ImplementationSpecific
    - host: demo-um.dialog.cm
      http:
        paths:
          - backend:
              service:
                name: dial-adm-plus-prod-service
                port:
                  number: 80
            pathType: ImplementationSpecific
          - backend:
              service:
                name: dial-adm-plus-prod-service
                port:
                  number: 443
            pathType: ImplementationSpecific
    - host: demo-dois.dialog.cm
      http:
        paths:
          - backend:
              service:
                name: dial-adm-plus-prod-service
                port:
                  number: 80
            pathType: ImplementationSpecific
          - backend:
              service:
                name: dial-adm-plus-prod-service
                port:
                  number: 443
            pathType: ImplementationSpecific
    - host: demo-tres.dialog.cm
      http:
        paths:
          - backend:
              service:
                name: dial-adm-plus-prod-service
                port:
                  number: 80
            pathType: ImplementationSpecific
          - backend:
              service:
                name: dial-adm-plus-prod-service
                port:
                  number: 443
            pathType: ImplementationSpecific
    - host: redecomunicacao.dialog.cm
      http:
        paths:
          - backend:
              service:
                name: dial-adm-plus-prod-service
                port:
                  number: 80
            pathType: ImplementationSpecific
          - backend:
              service:
                name: dial-adm-plus-prod-service
                port:
                  number: 443
            pathType: ImplementationSpecific
    - host: hoteis-othon.dialog.cm
      http:
        paths:
          - backend:
              service:
                name: dial-adm-plus-prod-service
                port:
                  number: 80
            pathType: ImplementationSpecific
          - backend:
              service:
                name: dial-adm-plus-prod-service
                port:
                  number: 443
            pathType: ImplementationSpecific
    - host: greenmetals.dialog.cm
      http:
        paths:
          - backend:
              service:
                name: dial-adm-plus-prod-service
                port:
                  number: 80
            pathType: ImplementationSpecific
          - backend:
              service:
                name: dial-adm-plus-prod-service
                port:
                  number: 443
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - plus.dialog.cm
        - passarelli.dialog.cm
        - rech.dialog.cm
        - unimedsulcapixaba.dialog.cm
        - lojasmm.dialog.cm
        - freto.dialog.cm
        - menteemfoco.dialog.cm
        - demo-um.dialog.cm
        - demo-dois.dialog.cm
        - demo-tres.dialog.cm
        - cearasc.dialog.cm
        - primecargo.dialog.cm
        - allied.dialog.cm
        - zaz.dialog.cm
        - redecomunicacao.dialog.cm
        - hoteis-othon.dialog.cm
        - greenmetals.dialog.cm
      secretName: dialog-wildcard-cert-v2
status:
  loadBalancer:
    ingress:
      - hostname: >-
          aa6a6ee5329434acc8348c541fbbf0b0-d1c8f680c0ea2d0f.elb.us-east-1.amazonaws.com
