dev_assets/ing.qa.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/proxy-body-size: 500m
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{"ingress.kubernetes.io/proxy-body-size":"500m","kubernetes.io/ingress.class":"nginx","nginx.ingress.kubernetes.io/proxy-body-size":"500m","nginx.ingress.kubernetes.io/proxy-buffer-size":"8k","nginx.ingress.kubernetes.io/proxy-buffering":"on","nginx.ingress.kubernetes.io/proxy-buffers-number":"4","nginx.ingress.kubernetes.io/proxy-connect-timeout":"1500","nginx.ingress.kubernetes.io/proxy-max-temp-file-size":"102 [...]
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 500m
    nginx.ingress.kubernetes.io/proxy-buffer-size: 8k
    nginx.ingress.kubernetes.io/proxy-buffering: "on"
    nginx.ingress.kubernetes.io/proxy-buffers-number: "4"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "1500"
    nginx.ingress.kubernetes.io/proxy-max-temp-file-size: 1024m
    nginx.ingress.kubernetes.io/proxy-next-upstream-timeout: "1500"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1500"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1500"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  creationTimestamp: "2021-07-15T13:37:46Z"
  generation: 8
  managedFields:
  - apiVersion: extensions/v1beta1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          .: {}
          f:ingress.kubernetes.io/proxy-body-size: {}
          f:kubernetes.io/ingress.class: {}
          f:nginx.ingress.kubernetes.io/proxy-body-size: {}
          f:nginx.ingress.kubernetes.io/proxy-buffer-size: {}
          f:nginx.ingress.kubernetes.io/proxy-buffering: {}
          f:nginx.ingress.kubernetes.io/proxy-buffers-number: {}
          f:nginx.ingress.kubernetes.io/proxy-connect-timeout: {}
          f:nginx.ingress.kubernetes.io/proxy-max-temp-file-size: {}
          f:nginx.ingress.kubernetes.io/proxy-next-upstream-timeout: {}
          f:nginx.ingress.kubernetes.io/proxy-read-timeout: {}
          f:nginx.ingress.kubernetes.io/proxy-send-timeout: {}
          f:nginx.ingress.kubernetes.io/rewrite-target: {}
          f:nginx.ingress.kubernetes.io/ssl-redirect: {}
      f:spec:
        f:tls: {}
    manager: kubectl-create
    operation: Update
    time: "2021-07-15T13:37:46Z"
  - apiVersion: networking.k8s.io/v1beta1
    fieldsType: FieldsV1
    fieldsV1:
      f:status:
        f:loadBalancer:
          f:ingress: {}
    manager: nginx-ingress-controller
    operation: Update
    time: "2021-09-23T14:04:34Z"
  - apiVersion: extensions/v1beta1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          f:kubectl.kubernetes.io/last-applied-configuration: {}
      f:spec:
        f:rules: {}
    manager: kubectl-client-side-apply
    operation: Update
    time: "2021-10-06T18:44:13Z"
  name: dial-adm-plus-qa
  namespace: default
  resourceVersion: "97611917"
  selfLink: /apis/extensions/v1beta1/namespaces/default/ingresses/dial-adm-plus-qa
  uid: e133d6dd-8177-4e8b-8c0f-43f213e5a7c0
spec:
  rules:
  - host: plus.dialog.qa
    http:
      paths:
      - backend:
          serviceName: dial-adm-plus-qa-service
          servicePort: 80
        pathType: ImplementationSpecific
      - backend:
          serviceName: dial-adm-plus-qa-service
          servicePort: 443
        pathType: ImplementationSpecific
  - host: rech.dialog.qa
    http:
      paths:
      - backend:
          serviceName: dial-adm-plus-qa-service
          servicePort: 80
        pathType: ImplementationSpecific
      - backend:
          serviceName: dial-adm-plus-qa-service
          servicePort: 443
        pathType: ImplementationSpecific
  - host: unimedsulcapixaba.dialog.qa
    http:
      paths:
      - backend:
          serviceName: dial-adm-plus-qa-service
          servicePort: 80
        pathType: ImplementationSpecific
      - backend:
          serviceName: dial-adm-plus-qa-service
          servicePort: 443
        pathType: ImplementationSpecific
  - host: passarelli.dialog.qa
    http:
      paths:
      - backend:
          serviceName: dial-adm-plus-qa-service
          servicePort: 80
        pathType: ImplementationSpecific
      - backend:
          serviceName: dial-adm-plus-qa-service
          servicePort: 443
        pathType: ImplementationSpecific
  - host: lojasmm.dialog.qa
    http:
      paths:
      - backend:
          serviceName: dial-adm-plus-qa-service
          servicePort: 80
        pathType: ImplementationSpecific
      - backend:
          serviceName: dial-adm-plus-qa-service
          servicePort: 443
        pathType: ImplementationSpecific
  - host: freto.dialog.qa
    http:
      paths:
      - backend:
          serviceName: dial-adm-plus-qa-service
          servicePort: 80
        pathType: ImplementationSpecific
      - backend:
          serviceName: dial-adm-plus-qa-service
          servicePort: 443
        pathType: ImplementationSpecific
  - host: cearasc.dialog.qa
    http:
      paths:
      - backend:
          serviceName: dial-adm-plus-qa-service
          servicePort: 80
        pathType: ImplementationSpecific
      - backend:
          serviceName: dial-adm-plus-qa-service
          servicePort: 443
        pathType: ImplementationSpecific
  - host: primecargo.dialog.qa
    http:
      paths:
      - backend:
          serviceName: dial-adm-plus-qa-service
          servicePort: 80
        pathType: ImplementationSpecific
      - backend:
          serviceName: dial-adm-plus-qa-service
          servicePort: 443
        pathType: ImplementationSpecific
  - host: allied.dialog.qa
    http:
      paths:
      - backend:
          serviceName: dial-adm-plus-qa-service
          servicePort: 80
        pathType: ImplementationSpecific
      - backend:
          serviceName: dial-adm-plus-qa-service
          servicePort: 443
        pathType: ImplementationSpecific
  - host: zaz.dialog.qa
    http:
      paths:
      - backend:
          serviceName: dial-adm-plus-qa-service
          servicePort: 80
        pathType: ImplementationSpecific
      - backend:
          serviceName: dial-adm-plus-qa-service
          servicePort: 443
        pathType: ImplementationSpecific
  - host: demo-um.dialog.qa
    http:
      paths:
      - backend:
          serviceName: dial-adm-plus-qa-service
          servicePort: 80
        pathType: ImplementationSpecific
      - backend:
          serviceName: dial-adm-plus-qa-service
          servicePort: 443
        pathType: ImplementationSpecific
  - host: demo-dois.dialog.qa
    http:
      paths:
      - backend:
          serviceName: dial-adm-plus-qa-service
          servicePort: 80
        pathType: ImplementationSpecific
      - backend:
          serviceName: dial-adm-plus-qa-service
          servicePort: 443
        pathType: ImplementationSpecific
  - host: menteemfoco.dialog.qa
    http:
      paths:
      - backend:
          serviceName: dial-adm-plus-qa-service
          servicePort: 80
        pathType: ImplementationSpecific
      - backend:
          serviceName: dial-adm-plus-qa-service
          servicePort: 443
        pathType: ImplementationSpecific
  - host: redecomunicacao.dialog.qa
    http:
      paths:
      - backend:
          serviceName: dial-adm-plus-qa-service
          servicePort: 80
        pathType: ImplementationSpecific
      - backend:
          serviceName: dial-adm-plus-qa-service
          servicePort: 443
        pathType: ImplementationSpecific
  - host: hoteis-othon.dialog.qa
    http:
      paths:
      - backend:
          serviceName: dial-adm-plus-qa-service
          servicePort: 80
        pathType: ImplementationSpecific
      - backend:
          serviceName: dial-adm-plus-qa-service
          servicePort: 443
        pathType: ImplementationSpecific
  tls:
  - secretName: dialog-wildcard
status:
  loadBalancer:
    ingress:
    - hostname: a915af2459ef74acbb05528c773bc8f7-2aba28beca3b7652.elb.sa-east-1.amazonaws.com
